--- a/Scrape_Script.ipynb
+++ b/Scrape_Script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 255,
    "id": "94077bdc-b7d7-4043-8324-6e38d38c0c20",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 256,
    "id": "8f81c82c-bced-4bff-80ff-81bb0e882c4a",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 257,
    "id": "c4466258-3d70-4d6f-8a49-87dfd7962e78",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 258,
    "id": "8cb17e5f-7789-4c3f-b117-8ec663ef97ae",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 259,
    "id": "d303ca37-118c-48df-bc87-124c81efcfe7",
    "metadata": {},
    "outputs": [],
@@ -111,20 +111,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 260,
    "id": "3abd239d-b2a5-48c0-aa28-b6c2df379b99",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Filter Funding Stages\n",
-    "stages = driver.find_element(By.CSS_SELECTOR,'div > div > input[aria-label*=\"Seed\"]') # selecting stage\n",
-    "                                                                                      # changing the css input sting input[aria-label*=\"Seed\"]\n",
-    "driver.execute_script(\"arguments[0].click();\", stages)"
+    "stages = driver.find_element(By.CSS_SELECTOR,'div > div > input[aria-label*=\"Seed\"]') # selecting stage SEED\n",
+    "driver.execute_script(\"arguments[0].click();\", stages)                                # changing the css input sting input[aria-label*=\"Seed\"]\n",
+    "\n",
+    "# stages = driver.find_element(By.CSS_SELECTOR,'div > div > input[aria-label*=\"Pre-series A\"]') # selecting stage Pre-Series A\n",
+    "# driver.execute_script(\"arguments[0].click();\", stages)    \n",
+    "\n",
+    "# stages = driver.find_element(By.CSS_SELECTOR,'div > div > input[aria-label*=\"Series A\"]') # selecting stage Series A \n",
+    "# driver.execute_script(\"arguments[0].click();\", stages)    \n",
+    "\n",
+    "# stages = driver.find_element(By.CSS_SELECTOR,'div > div > input[aria-label*=\"Series B\"]') # selecting stage Series B\n",
+    "# driver.execute_script(\"arguments[0].click();\", stages)    \n",
+    "\n",
+    "# stages = driver.find_element(By.CSS_SELECTOR,'div > div > input[aria-label*=\"Series C\"]') # selecting stage Series C\n",
+    "# driver.execute_script(\"arguments[0].click();\", stages)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 261,
    "id": "3d803037-da51-497c-8bdd-00dc68649164",
    "metadata": {},
    "outputs": [],
@@ -142,50 +153,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 262,
    "id": "e284375c-cd7a-4c2f-acc3-26a6b986d462",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "StaleElementReferenceException",
-     "evalue": "Message: stale element reference: element is not attached to the page document\n  (Session info: chrome=100.0.4896.127)\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x009F7413+2389011]\n\tOrdinal0 [0x00989F61+1941345]\n\tOrdinal0 [0x0087C658+837208]\n\tOrdinal0 [0x0087F064+847972]\n\tOrdinal0 [0x0087EF22+847650]\n\tOrdinal0 [0x0087F1B0+848304]\n\tOrdinal0 [0x008A8EF2+1019634]\n\tOrdinal0 [0x008A949B+1021083]\n\tOrdinal0 [0x0089F9F1+981489]\n\tOrdinal0 [0x008C4194+1130900]\n\tOrdinal0 [0x0089F974+981364]\n\tOrdinal0 [0x008C4364+1131364]\n\tOrdinal0 [0x008D4302+1196802]\n\tOrdinal0 [0x008C3F66+1130342]\n\tOrdinal0 [0x0089E546+976198]\n\tOrdinal0 [0x0089F456+980054]\n\tGetHandleVerifier [0x00BA9632+1727522]\n\tGetHandleVerifier [0x00C5BA4D+2457661]\n\tGetHandleVerifier [0x00A8EB81+569713]\n\tGetHandleVerifier [0x00A8DD76+566118]\n\tOrdinal0 [0x00990B2B+1968939]\n\tOrdinal0 [0x00995988+1989000]\n\tOrdinal0 [0x00995A75+1989237]\n\tOrdinal0 [0x0099ECB1+2026673]\n\tBaseThreadInitThunk [0x76CDFA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77D57A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77D57A4E+238]\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mStaleElementReferenceException\u001b[0m            Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\JEFFRE~1\\AppData\\Local\\Temp/ipykernel_11040/4074586827.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mresult\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdirectoryresult\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m     \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCSS_SELECTOR\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'a[href^=\"/profiles/\"][class=\"card entity entity--shadow\"]'\u001b[0m\u001b[1;33m)\u001b[0m    \u001b[1;31m# Clicking the urls\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m     \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[1;31m# driver.implicitly_wait(10)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py\u001b[0m in \u001b[0;36mfind_element\u001b[1;34m(self, by, value)\u001b[0m\n\u001b[0;32m    733\u001b[0m             \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'[name=\"%s\"]'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    734\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 735\u001b[1;33m         return self._execute(Command.FIND_CHILD_ELEMENT,\n\u001b[0m\u001b[0;32m    736\u001b[0m                              {\"using\": by, \"value\": value})['value']\n\u001b[0;32m    737\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py\u001b[0m in \u001b[0;36m_execute\u001b[1;34m(self, command, params)\u001b[0m\n\u001b[0;32m    708\u001b[0m             \u001b[0mparams\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    709\u001b[0m         \u001b[0mparams\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'id'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_id\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 710\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    711\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    712\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mfind_element\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mby\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mID\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    422\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    423\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 424\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    425\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[0;32m    426\u001b[0m                 response.get('value', None))\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    245\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'alert'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'text'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    246\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 247\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    248\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    249\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mMapping\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0m_KT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0m_KT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mStaleElementReferenceException\u001b[0m: Message: stale element reference: element is not attached to the page document\n  (Session info: chrome=100.0.4896.127)\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x009F7413+2389011]\n\tOrdinal0 [0x00989F61+1941345]\n\tOrdinal0 [0x0087C658+837208]\n\tOrdinal0 [0x0087F064+847972]\n\tOrdinal0 [0x0087EF22+847650]\n\tOrdinal0 [0x0087F1B0+848304]\n\tOrdinal0 [0x008A8EF2+1019634]\n\tOrdinal0 [0x008A949B+1021083]\n\tOrdinal0 [0x0089F9F1+981489]\n\tOrdinal0 [0x008C4194+1130900]\n\tOrdinal0 [0x0089F974+981364]\n\tOrdinal0 [0x008C4364+1131364]\n\tOrdinal0 [0x008D4302+1196802]\n\tOrdinal0 [0x008C3F66+1130342]\n\tOrdinal0 [0x0089E546+976198]\n\tOrdinal0 [0x0089F456+980054]\n\tGetHandleVerifier [0x00BA9632+1727522]\n\tGetHandleVerifier [0x00C5BA4D+2457661]\n\tGetHandleVerifier [0x00A8EB81+569713]\n\tGetHandleVerifier [0x00A8DD76+566118]\n\tOrdinal0 [0x00990B2B+1968939]\n\tOrdinal0 [0x00995988+1989000]\n\tOrdinal0 [0x00995A75+1989237]\n\tOrdinal0 [0x0099ECB1+2026673]\n\tBaseThreadInitThunk [0x76CDFA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77D57A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77D57A4E+238]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Click on Company Cards \n",
     "# Loop through every entity display name to open in new tab\n",
     "\n",
-    "founder = []\n",
-    "company_email = []\n",
-    "phone_number = []\n",
-    "company_name = []\n",
-    "employee_number = []\n",
-    "company_stage = []\n",
-    "linkedin = []\n",
+    "# First_name= []\n",
+    "# Last_name = []\n",
+    "# company_email = []\n",
+    "# phone_number = []\n",
+    "# company_name = []\n",
+    "# employee_number = []\n",
+    "# company_stage = []\n",
+    "# social_links = []\n",
     "\n",
-    "# directoryresult = driver.find_element(By.XPATH, '//*[@id=\"app\"]/div[12]/div/main/div/div/div/section/section/div[3]/div') # Selecting the directory result by xpath\n",
+    "# # directoryresult = driver.find_element(By.XPATH, '//*[@id=\"app\"]/div[12]/div/main/div/div/div/section/section/div[3]/div') # Selecting the directory result by xpath\n",
     "directoryresult = driver.find_elements(By.CSS_SELECTOR, 'section > section > div.v-data-iterator.theme--light > div > div[class*=\"flex xs12\"]') # Selecting the directory result by css selector\n",
-    "# cur_win = driver.current_window_handle\n",
     "\n",
     "for result in directoryresult:\n",
     "    result.find_element(By.CSS_SELECTOR, 'a[href^=\"/profiles/\"][class=\"card entity entity--shadow\"]')    # Clicking the urls\n",
     "    result.click()\n",
     "    # driver.implicitly_wait(10)\n",
     "    \n",
+    "    # Opening Company page on new window and Grabing Contact Detials From the Page  \n",
+    "    \n",
     "    try:\n",
     "        driver.switch_to.window(driver.window_handles[1]) # handles switch to new window\n",
     "\n",
+    "        # Scraping Contact Details from Company Page\n",
     "        company = driver.find_element(By.XPATH, '//*[@id=\"app\"]/div[7]/div/main/div/div/section/div[1]/div/section/div/div/div[1]/header/div/div[2]/h1').text\n",
     "        company_name.append(company)\n",
     "\n",
@@ -196,7 +194,9 @@
     "        company_stage.append(funding_round)\n",
     "\n",
     "        name = driver.find_element(By.CSS_SELECTOR, 'h4[class*=\"team__name\"]').text\n",
-    "        founder.append(name)\n",
+    "        first,last = name.split('')\n",
+    "        First_name.append(first)\n",
+    "        Last_naem.append(last)\n",
     "\n",
     "        email = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[1]/li[3]/a').text\n",
     "        company_email.append(email)\n",
@@ -204,47 +204,60 @@
     "        phone = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[1]/li[4]/span').text\n",
     "        phone_number.append(phone)\n",
     "\n",
-    "        Linkedin = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li/a[@href=\"https://www.linkedin.com/\"]')\n",
-    "        linkedin.append(Linkedin.get_attribute('href'))\n",
+    "        social = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li[1]/a')\n",
+    "        social_links.append(social.get_attribute('href'))\n",
     "        \n",
-    "        Linkedin_1 = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li[3]/a[@href=\"https://www.linkedin.com/\"]')\n",
-    "        linkedin.append(Linkedin_1.get_attribute('href'))\n",
+    "        social_1 = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li[2]/a')\n",
+    "        social_links.append(social_1.get_attribute('href'))\n",
+    "        \n",
+    "        social_2 = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li[3]/a')\n",
+    "        social_links.append(social_2.get_attribute('href'))\n",
+    "        \n",
+    "        social_3 = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li[4]/a')\n",
+    "        social_links.append(social_3.get_attribute('href'))\n",
     "        \n",
     "    except:\n",
     "        print(\"Can't get item\")\n",
     "    finally:\n",
-    "        driver.close()\n",
+    "        driver.close() # Close the new window\n",
     "                                               \n",
     "    # driver.close() # Close the new window\n",
-    "\n",
-    "    driver.switch_to.window(driver.window_handles[0]) # handles Switching back to main window    \n",
-    "    # driver.switch_to.window(cur_win)"
+    "    \n",
+    "    driver.switch_to.window(driver.window_handles[0]) # handles Switching back to main window   \n",
+    "    \n",
+    "    # Navigating to the next page\n",
+    "    next_button= driver.find_element(By.XPATH,'//*[@id=\"app\"]/div[13]/div/main/div/div/div/section/section/div[4]/ul/li[11]/button').click() # clicking the next button"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e38e932f-6332-43b6-a07a-bac0dee50768",
+   "id": "b0fa0e96-c9cc-43a3-9d1d-7d98b9feb59b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "id": "d4382ad9-c337-4b77-b3dd-2f6c79fc5ca8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(founder)\n",
-    "print(company_email)\n",
-    "print(phone_number)\n",
-    "print(company_name)\n",
-    "print(employee_number)\n",
-    "print(company_stage)\n",
-    "print(linkedin)"
+    "# Going to the next page \n",
+    "# pagenavigation= driver.find_element(By.CSS_SELECTOR, 'section > section > div.layout.directory__pagination.justify-center') # page navigatio\n",
+    "\n",
+    "# next_button= driver.find_element(By.XPATH,'//*[@id=\"app\"]/div[13]/div/main/div/div/div/section/section/div[4]/ul/li[11]/button').click() # clicking the next button\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 264,
    "id": "6f953ac6-7014-49c6-ab5c-83bb87fd11b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # # Grabbing Company Contact Details \n",
+    "# # Grabbing Company Contact Details \n",
     "\n",
     "# driver.switch_to.window(driver.window_handles[1]) # handles switch to window 1  \n",
     "\n",
@@ -254,9 +267,7 @@
     "# linkedin = []\n",
     "# companyname = []\n",
     "# employeenumber = []\n",
-    "# companystage = []\n",
-    "\n",
-    "\n",
+    "# companystage = []     \n",
     "\n",
     "# name = driver.find_element(By.XPATH, '//*[@id=\"team\"]/div/div/div/div[2]/div/div[2]/h4').text\n",
     "# founder.append(name)\n",
@@ -284,7 +295,23 @@
     "\n",
     "# driver.close() # Close the new window\n",
     "\n",
-    "# # driver.switch_to.window(driver.window_handles[0]) # handles Switching back to main window    "
+    "# driver.switch_to.window(driver.window_handles[0]) # handles Switching back to main window    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "id": "e38e932f-6332-43b6-a07a-bac0dee50768",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(founder)\n",
+    "# print(company_email)\n",
+    "# print(phone_number)\n",
+    "# print(company_name)\n",
+    "# print(employee_number)\n",
+    "# print(company_stage)\n",
+    "# print(linkedin)"
    ]
   }
  ],
