--- a/Scrape_Script.ipynb
+++ b/Scrape_Script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 691,
+   "execution_count": 736,
    "id": "94077bdc-b7d7-4043-8324-6e38d38c0c20",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 692,
+   "execution_count": 737,
    "id": "8f81c82c-bced-4bff-80ff-81bb0e882c4a",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 693,
+   "execution_count": 738,
    "id": "b940d432-efa1-42f5-a4c6-88055a82afdc",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 694,
+   "execution_count": 739,
    "id": "c4466258-3d70-4d6f-8a49-87dfd7962e78",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 695,
+   "execution_count": 740,
    "id": "c1c6d0ac-92eb-4585-a1fb-90b5cdab6c1a",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
+   "execution_count": 741,
    "id": "3d803037-da51-497c-8bdd-00dc68649164",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 698,
+   "execution_count": 742,
    "id": "1a0fbfb9-ae74-4b3c-b06c-7d481f6f7d4a",
    "metadata": {
     "tags": []
@@ -140,9 +140,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Can't find Element\n",
-      "Can't find Element\n",
-      "Can't find Element\n",
       "Can't find Element\n",
       "Can't find Element\n",
       "Can't find Element\n"
@@ -193,23 +190,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 699,
-   "id": "e38e932f-6332-43b6-a07a-bac0dee50768",
+   "execution_count": 743,
+   "id": "253e7503-a9f8-4e7d-be24-107e1e020dbb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(company_name)\n",
-    "# print(funding_stage)\n",
-    "# print(employee_range)\n",
-    "# print(email)\n",
-    "# print(phone_number)\n",
-    "# print(name)\n",
-    "# print(link)"
+    "        #         founder= driver.find_element(By.CSS_SELECTOR, 'div> h4.team__name').test\n",
+    "        # name.append(founder)\n",
+    "        # link = driver.find_element(By.CSS_SELECTOR, 'a[href^=\"https://www.linkedin.com/company/\"]')\n",
+    "        # linkedin.append(link.get_attribute('href')\n",
+    "        # for i in driver.find_elements(By.CSS_SELECTOR, 'div> h4.team__name'):\n",
+    "        #     name.append(i.text)\n",
+    "        # for j in driver.find_elements(By.CSS_SELECTOR, 'a[href^=\"https://www.linkedin.com/company/\"]'):\n",
+    "        #     link.append(j.get_attribute('href'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 750,
+   "id": "e38e932f-6332-43b6-a07a-bac0dee50768",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DocDoc', 'AXLERATE', 'FLIXSTOCK PTE. LTD.', 'PARCEL PERFORM', 'MICELAH PTE. LTD.', 'HYDROLEAP PTE. LTD.', 'CLASSDO PTE. LTD.', 'VULCAN AI PTE. LTD.', 'mClinica', 'SENTIENT.IO PTE. LTD.']\n",
+      "['Series A', 'Seed', 'Seed', 'Seed', 'Seed', 'Seed', 'Seed', 'Pre-series A', 'Series A', 'Series B']\n",
+      "['51 - 100 employees', '1 - 10 employees', '51 - 100 employees', '51 - 100 employees', '1 - 10 employees', '1 - 10 employees', '11 - 50 employees', '11 - 50 employees', '11 - 50 employees', '51 - 100 employees']\n",
+      "['support@docdoc.com', 'varad@terratech.com.sg', 'hkeer@flixstock.com', 'contact@parcelperform.com', 'nim@micelah.com', 'm.sherafatmand@hydroleap.com', 'chiew.chung@classdo.com', 'manik.bhandari@vulcan-ai.com', 'chris@sentient.io']\n",
+      "['+65 66028035', '+65 93873665', '+91 9910415201', '+65 83001955', '+65 90531604', '+65 92973709', '+65 96860250']\n",
+      "['Cole Sirucek', 'Ajay Khandelwal', 'Harindar Keer', 'Nirmala Bali', 'Anuj Batra', 'Stephen Sui', 'Mohammad Sherafatmand', 'Manik Bhandari', 'Chris Yeo', 'linda Tan', 'Eddie Leong', 'Gloria Koh']\n",
+      "['https://www.linkedin.com/company/docdocasia', 'https://www.linkedin.com/company/docdocasia', 'https://www.linkedin.com/company/flixstock', 'https://www.linkedin.com/company/micelah-pte-ltd', 'https://www.linkedin.com/company/hydroleap/', 'https://www.linkedin.com/company/vulcanai']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(company_name)\n",
+    "print(funding_stage)\n",
+    "print(employee_range)\n",
+    "print(email)\n",
+    "print(phone_number)\n",
+    "print(name)\n",
+    "print(link)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 745,
    "id": "08b60e69-9345-41a2-98a2-e57f2eb8a415",
    "metadata": {},
    "outputs": [],
@@ -227,54 +255,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 702,
+   "execution_count": 746,
    "id": "b0fa0e96-c9cc-43a3-9d1d-7d98b9feb59b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"list\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\JEFFRE~1\\AppData\\Local\\Temp/ipykernel_16876/3906942335.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# contact = [first_name + last_name + company_name + funding_stage + employee_range + email + phone_number + link]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mcontact\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mcompany\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstage\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0memployee_count\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mmail\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mphone\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mname\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mlink\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mcontact_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"list\") to str"
-     ]
-    }
-   ],
-   "source": [
-    "# Concatenating the lists of details \n",
-    "contact = [first_name + last_name + company_name + funding_stage + employee_range + email + phone_number + link]\n",
-    "\n",
-    "contact_data = []\n",
-    "contact_data.append(contact) \n",
-    "print(contact_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a1e3306-6c6a-45bd-833d-589857ad7846",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Converting List to Pandas Dataframe\n",
-    "# contacts = pd.DataFrame(contact_data, columns=[first_name, last_name, email, phone_number, company_name, employee_range, funding_stage, link])\n",
+    "# Concatenating the lists of details \n",
+    "# contact = [first_name + last_name + company_name + funding_stage + employee_range + email + phone_number + link]\n",
     "\n",
-    "# contacts"
+    "# contact_data = []\n",
+    "# contact_data.append(contact) \n",
+    "# print(contact_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 747,
+   "id": "2a1e3306-6c6a-45bd-833d-589857ad7846",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>First_name</th>\n",
+       "      <th>Last_name</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Funding_stage</th>\n",
+       "      <th>Employee_range</th>\n",
+       "      <th>Email</th>\n",
+       "      <th>Phone_number</th>\n",
+       "      <th>Linkedin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cole</td>\n",
+       "      <td>Sirucek</td>\n",
+       "      <td>DocDoc</td>\n",
+       "      <td>Series A</td>\n",
+       "      <td>51 - 100 employees</td>\n",
+       "      <td>support@docdoc.com</td>\n",
+       "      <td>+65 66028035</td>\n",
+       "      <td>https://www.linkedin.com/company/docdocasia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ajay</td>\n",
+       "      <td>Khandelwal</td>\n",
+       "      <td>AXLERATE</td>\n",
+       "      <td>Seed</td>\n",
+       "      <td>1 - 10 employees</td>\n",
+       "      <td>varad@terratech.com.sg</td>\n",
+       "      <td>+65 93873665</td>\n",
+       "      <td>https://www.linkedin.com/company/docdocasia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Harindar</td>\n",
+       "      <td>Keer</td>\n",
+       "      <td>FLIXSTOCK PTE. LTD.</td>\n",
+       "      <td>Seed</td>\n",
+       "      <td>51 - 100 employees</td>\n",
+       "      <td>hkeer@flixstock.com</td>\n",
+       "      <td>+91 9910415201</td>\n",
+       "      <td>https://www.linkedin.com/company/flixstock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Nirmala</td>\n",
+       "      <td>Bali</td>\n",
+       "      <td>PARCEL PERFORM</td>\n",
+       "      <td>Seed</td>\n",
+       "      <td>51 - 100 employees</td>\n",
+       "      <td>contact@parcelperform.com</td>\n",
+       "      <td>+65 83001955</td>\n",
+       "      <td>https://www.linkedin.com/company/micelah-pte-ltd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Anuj</td>\n",
+       "      <td>Batra</td>\n",
+       "      <td>MICELAH PTE. LTD.</td>\n",
+       "      <td>Seed</td>\n",
+       "      <td>1 - 10 employees</td>\n",
+       "      <td>nim@micelah.com</td>\n",
+       "      <td>+65 90531604</td>\n",
+       "      <td>https://www.linkedin.com/company/hydroleap/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Stephen</td>\n",
+       "      <td>Sui</td>\n",
+       "      <td>HYDROLEAP PTE. LTD.</td>\n",
+       "      <td>Seed</td>\n",
+       "      <td>1 - 10 employees</td>\n",
+       "      <td>m.sherafatmand@hydroleap.com</td>\n",
+       "      <td>+65 92973709</td>\n",
+       "      <td>https://www.linkedin.com/company/vulcanai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Mohammad</td>\n",
+       "      <td>Sherafatmand</td>\n",
+       "      <td>CLASSDO PTE. LTD.</td>\n",
+       "      <td>Seed</td>\n",
+       "      <td>11 - 50 employees</td>\n",
+       "      <td>chiew.chung@classdo.com</td>\n",
+       "      <td>+65 96860250</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Manik</td>\n",
+       "      <td>Bhandari</td>\n",
+       "      <td>VULCAN AI PTE. LTD.</td>\n",
+       "      <td>Pre-series A</td>\n",
+       "      <td>11 - 50 employees</td>\n",
+       "      <td>manik.bhandari@vulcan-ai.com</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Chris</td>\n",
+       "      <td>Yeo</td>\n",
+       "      <td>mClinica</td>\n",
+       "      <td>Series A</td>\n",
+       "      <td>11 - 50 employees</td>\n",
+       "      <td>chris@sentient.io</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>linda</td>\n",
+       "      <td>Tan</td>\n",
+       "      <td>SENTIENT.IO PTE. LTD.</td>\n",
+       "      <td>Series B</td>\n",
+       "      <td>51 - 100 employees</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Eddie</td>\n",
+       "      <td>Leong</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Gloria</td>\n",
+       "      <td>Koh</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   First_name     Last_name                Company Funding_stage  \\\n",
+       "0        Cole       Sirucek                 DocDoc      Series A   \n",
+       "1        Ajay    Khandelwal               AXLERATE          Seed   \n",
+       "2    Harindar          Keer    FLIXSTOCK PTE. LTD.          Seed   \n",
+       "3     Nirmala          Bali         PARCEL PERFORM          Seed   \n",
+       "4        Anuj         Batra      MICELAH PTE. LTD.          Seed   \n",
+       "5     Stephen           Sui    HYDROLEAP PTE. LTD.          Seed   \n",
+       "6    Mohammad  Sherafatmand      CLASSDO PTE. LTD.          Seed   \n",
+       "7       Manik      Bhandari    VULCAN AI PTE. LTD.  Pre-series A   \n",
+       "8       Chris           Yeo               mClinica      Series A   \n",
+       "9       linda           Tan  SENTIENT.IO PTE. LTD.      Series B   \n",
+       "10      Eddie         Leong                   None          None   \n",
+       "11     Gloria           Koh                   None          None   \n",
+       "\n",
+       "        Employee_range                         Email    Phone_number  \\\n",
+       "0   51 - 100 employees            support@docdoc.com    +65 66028035   \n",
+       "1     1 - 10 employees        varad@terratech.com.sg    +65 93873665   \n",
+       "2   51 - 100 employees           hkeer@flixstock.com  +91 9910415201   \n",
+       "3   51 - 100 employees     contact@parcelperform.com    +65 83001955   \n",
+       "4     1 - 10 employees               nim@micelah.com    +65 90531604   \n",
+       "5     1 - 10 employees  m.sherafatmand@hydroleap.com    +65 92973709   \n",
+       "6    11 - 50 employees       chiew.chung@classdo.com    +65 96860250   \n",
+       "7    11 - 50 employees  manik.bhandari@vulcan-ai.com            None   \n",
+       "8    11 - 50 employees             chris@sentient.io            None   \n",
+       "9   51 - 100 employees                          None            None   \n",
+       "10                None                          None            None   \n",
+       "11                None                          None            None   \n",
+       "\n",
+       "                                            Linkedin  \n",
+       "0        https://www.linkedin.com/company/docdocasia  \n",
+       "1        https://www.linkedin.com/company/docdocasia  \n",
+       "2         https://www.linkedin.com/company/flixstock  \n",
+       "3   https://www.linkedin.com/company/micelah-pte-ltd  \n",
+       "4        https://www.linkedin.com/company/hydroleap/  \n",
+       "5          https://www.linkedin.com/company/vulcanai  \n",
+       "6                                               None  \n",
+       "7                                               None  \n",
+       "8                                               None  \n",
+       "9                                               None  \n",
+       "10                                              None  \n",
+       "11                                              None  "
+      ]
+     },
+     "execution_count": 747,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Converting List to Pandas Dataframe\n",
+    "# contacts = pd.DataFrame(contact_data, columns=[first_name, last_name, email, phone_number, company_name, employee_range, funding_stage, link])\n",
+    "# contacts = pd.DataFrame({'First_name':first_name, 'Last_name':last_name, 'Company':company_name, 'Funding_stage':funding_stage, 'Employee_range':employee_range, 'Email':email, 'Phone_number':phone_number, 'Linkedin':link})\n",
+    "\n",
+    "contact = {'First_name':first_name, 'Last_name':last_name, 'Company':company_name, 'Funding_stage':funding_stage, 'Employee_range':employee_range, 'Email':email, 'Phone_number':phone_number, 'Linkedin':link}\n",
+    "contacts = pd.DataFrame.from_dict(contact, orient='index')\n",
+    "contacts = contacts.transpose()\n",
+    "\n",
+    "contacts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 758,
    "id": "564279a8-6470-4bf9-ac4e-d4741716db92",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert to excel \n",
-    "# StartupSG_Contact_listcontacts.DataFrame.to_excel('C:\\Users\\Jeffrey Esedo\\Desktop\\Scraping_job_francis\\StartupSG_Contact_list.xlsx')"
+    "contacts.to_excel('StartupSG Contact_list.xlsx')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14f5664d-481a-4323-884e-6688f9ce0a10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
